// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applications documentation GET /case/123/project-documentation should render the page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row govuk-!-padding-top-9 govuk-!-padding-bottom-2 govuk-!-margin-left-0 govuk-!-margin-bottom-7 pins-masthead-summary\\">
        <div class=\\"govuk-grid-column-full\\">
            <h4 class=\\"govuk-heading-m\\"> CASE/04 </h4>
            <h1 class=\\"govuk-heading-xl\\">Case with no sector</h1>
            <div class=\\"govuk-grid-row\\">
                <div class=\\"govuk-grid-column-full govuk-body\\">,
                    <br>
                    <br><strong class=\\"govuk-tag govuk-tag--\\">draft</strong>
                </div>
            </div>
        </div>
    </div>
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <h2 class=\\"govuk-heading-m\\">Project documentation</h2>
            <p class=\\"govuk-body-s colour--secondary\\">All documents relating to the project</p><a class=\\"govuk-link govuk-heading-s\\"
            href=\\"/applications-service/case/123/project-documentation/1/project-management/\\"> Project management</a>
            <a             class=\\"govuk-link govuk-heading-s\\" href=\\"/applications-service/case/123/project-documentation/2/legal-advice/\\">Legal advice</a><a class=\\"govuk-link govuk-heading-s\\" href=\\"/applications-service/case/123/project-documentation/3/transboundary/\\"> Transboundary</a>
                <a                 class=\\"govuk-link govuk-heading-s\\" href=\\"/applications-service/case/123/project-documentation/4/land-rights/\\">Land rights</a>
        </div>
    </div>
</main>"
`;

exports[`applications documentation GET /case/123/project-documentation/21/sub-folder-level2 should render the page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row govuk-!-padding-top-9 govuk-!-padding-bottom-2 govuk-!-margin-left-0 govuk-!-margin-bottom-7 pins-masthead-summary\\">
        <div class=\\"govuk-grid-column-full\\">
            <h4 class=\\"govuk-heading-m\\"> CASE/04 </h4>
            <h1 class=\\"govuk-heading-xl\\">Case with no sector</h1>
            <div class=\\"govuk-grid-row\\">
                <div class=\\"govuk-grid-column-full govuk-body\\">,
                    <br>
                    <br><strong class=\\"govuk-tag govuk-tag--\\">draft</strong>
                </div>
            </div>
        </div>
    </div>
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-breadcrumbs govuk-!-margin-top-0\\">
                <ol class=\\"govuk-breadcrumbs__list\\">
                    <li class=\\"govuk-breadcrumbs__list-item\\"><a class=\\"govuk-breadcrumbs__link\\" href=\\"/applications-service/case/123/project-documentation\\">Project documentation</a>
                    </li>
                    <li class=\\"govuk-breadcrumbs__list-item\\"><a class=\\"govuk-breadcrumbs__link\\" href=\\"/applications-service/case/123/project-documentation/1/project-management/\\">Project management</a>
                    </li>
                    <li class=\\"govuk-breadcrumbs__list-item\\"><a class=\\"govuk-breadcrumbs__link\\" href=\\"/applications-service/case/123/project-documentation/21/sub-folder-level-2/\\">Sub folder level 2</a>
                    </li>
                </ol>
            </div>
            <h2 class=\\"govuk-heading-l\\">Sub folder level 2</h2>
            <div class=\\"govuk-grid-row govuk-grid-column-full\\"><a class=\\"govuk-link govuk-body-s govuk-!-font-weight-bold\\" href=\\"/applications-service/case/123/project-documentation/31/sub-folder-a/\\"> Sub folder a</a>
            </div>
            <div class=\\"govuk-grid-row govuk-grid-column-full\\"><a class=\\"govuk-link govuk-body-s govuk-!-font-weight-bold\\" href=\\"/applications-service/case/123/project-documentation/32/sub-folder-b/\\"> Sub folder b</a>
            </div>
            <div class=\\"govuk-grid-row govuk-!-margin-top-0\\">
                <div class=\\"govuk-button-group pins-button-group govuk-grid-column-one-half govuk-!-margin-top-0\\"><a class=\\"govuk-button\\" href=\\"/applications-service/case/123/project-documentation/21/sub-folder-level-2/upload\\"> Upload files</a>
                </div>
            </div>
            <div class=\\"govuk-grid-row govuk-grid-column-full\\"><a class=\\"govuk-link govuk-body-s govuk-!-font-weight-bold\\" href=#> sitting-1.png</a>
            </div>
        </div>
    </div>
</main>"
`;

exports[`applications documentation GET /case/123/project-documentation/21/sub-folder-level2/upload should render the page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row pins-file-upload\\" data-next-page-url=\\"/applications-service/case/123/project-documentation/21/sub-folder-level-2/\\"
    data-case-id=\\"123\\" data-folder-id=\\"21\\" data-allowed-types=\\".pdf,application/pdf,.doc,application/msword,.docx,application/vnd.openxmlformats-officedocument.wordprocessingml.document,.ppt,application/vnd.ms-powerpoint,.pptx,application/vnd.openxmlformats-officedocument.presentationml.presentation,.xls,application/vnd.ms-excel,.xlsx,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,.jpg,image/jpeg,.jpeg,image/jpeg,.mpeg,video/mpeg,.mp3,audio/mpeg,.mp4,video/mp4,.mov,video/quicktime,.png,image/png,.tif,image/tiff,.tiff,image/tiff,\\">
        <div class=\\"top-errors-hook\\"></div>
        <h2 class=\\"govuk-heading-m govuk-grid-column-full\\">Upload files in Sub folder level 2 folder</h2>
        <form class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"pins-file-upload--container\\">
                <div class=\\"govuk-body colour--secondary pins-file-upload--instructions\\">
                    <label for=\\"upload-file-1\\">Choose a single or multiple files to upload.</label><span> Your file must be 
							PDF,

							DOC,

							DOCX,

							PPT,

							PPTX,

							XLS,

							XLSX,

							JPG,

							JPEG,

							MPEG,

							MP3,

							MP4,

							MOV,

							PNG,

							TIF,

							or TIFF
.</span><span>The total of your uploaded files must be smaller than 1 GB.</span>
                    <div                     class=\\"middle-errors-hook\\"></div>
            </div>
            <div class=\\"display--flex\\">
                <input class=\\"display--none\\" id=\\"upload-file-1\\" accept=\\".pdf,application/pdf,.doc,application/msword,.docx,application/vnd.openxmlformats-officedocument.wordprocessingml.document,.ppt,application/vnd.ms-powerpoint,.pptx,application/vnd.openxmlformats-officedocument.presentationml.presentation,.xls,application/vnd.ms-excel,.xlsx,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,.jpg,image/jpeg,.jpeg,image/jpeg,.mpeg,video/mpeg,.mp3,audio/mpeg,.mp4,video/mp4,.mov,video/quicktime,.png,image/png,.tif,image/tiff,.tiff,image/tiff,\\"
                type=\\"file\\" name=\\"files\\" value=\\"Choose file\\" aria-controls=\\"file-list-1\\"
                multiple>
                <button type='button' class=\\"pins-file-upload--button govuk-button\\">Choose file</button><span role=\\"status\\" aria-live=\\"assertive\\" class='govuk-body pins-file-upload--counter'> No file chosen</span>
            </div>
            <div id=\\"file-list-1\\">
                <h3 class=\\"display--sr-only\\" id=\\"file-list-title-1\\">List of files to upload</h3>
                <ul class=\\"pins-file-upload--files-rows\\" aria-describedby=\\"file-list-title-1\\"
                aria-live=\\"polite\\"></ul>
            </div>
    </div>
    <div class=\\"govuk-inset-text\\">Saving files will default then to ‘Unredacted’ and ‘Not checked’</div>
    <div     class=\\"display--flex\\">
        <button class=\\"govuk-button pins-file-upload--submit\\" data-module=\\"govuk-button\\"
        id=\\"submit-button-1\\">Save and continue</button>
        <div class=\\"progress-hook\\"></div>
        </div>
        </form>
        </div>
</main>"
`;
